compiler/testData/diagnostics/tests/inlineClasses/reifiedGenericUnderlyingType.kt
// !LANGUAGE: +InlineClasses, -JvmInlineValueClasses
// SKIP_TXT

inline class ICAny<<!REIFIED_TYPE_PARAMETER_NO_INLINE, REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T>(val value: <!VALUE_CLASS_HAS_INAPPLICABLE_PARAMETER_TYPE!>T<!>)
